Add pages with detail view for cooks and dishes

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,3 +10,9 @@ body {
 .home {
     width: 500px;
 }
+
+p.description {
+    display: inline-block;
+    width: 500px;
+    text-align: justify;
+}
