--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -6,7 +6,7 @@
 {% block content %}
   <h1>
     Dish List
-    <a href="#" class="btn btn-primary link-to-page">
+    <a href="{% url 'kitchen:dish-create' %}" class="btn btn-primary link-to-page">
       Create
     </a>
   </h1>
