--- a/templates/kitchen/dish_detail.html
+++ b/templates/kitchen/dish_detail.html
@@ -19,11 +19,11 @@
     Cooks
 
     {% if dish in user.dishes.all %}
-      <a href="#" class="btn btn-danger link-to-page">
+      <a href="{% url 'kitchen:toggle-dish-assign' pk=dish.id %}" class="btn btn-danger link-to-page">
         Delete me from this dish
       </a>
     {% else %}
-      <a href="#" class="btn btn-success link-to-page">
+      <a href="{% url 'kitchen:toggle-dish-assign' pk=dish.id %}" class="btn btn-success link-to-page">
         Assign me to this dish
       </a>
     {% endif %}
