--- a/templates/kitchen/dish_type_confirm_delete.html
+++ b/templates/kitchen/dish_type_confirm_delete.html
@@ -2,9 +2,13 @@
 
 {% block content %}
   <h2 style="padding-top: 100px">Delete dish type?</h2>
+
   <form action="" method="post">
     {% csrf_token %}
 
     <input type="submit" value="Yes" class="btn btn-danger">
+
+    <a href="{% url 'kitchen:dish-type-detail' pk=dishtype.id %}" class="btn btn-success">Cancel</a>
+
   </form>
 {% endblock %}
