--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -49,7 +49,7 @@
           <div class="row">
             <div class="col-md-4 position-relative">
               <div class="p-3 text-center">
-                <h1 class="text-gradient text-primary"><span id="state1" countTo="{{ num_dish_types }}">0</span>+</h1>
+                <h1 class="text-gradient text-primary"><span id="state1" countTo="{{ num_dish_types }}">0</span></h1>
                 <a href="{% url 'kitchen:dish-type-list' %}" class="dropdown-item border-radius-md">
                   <h5 class="mt-3">Dishes Types</h5>
                 </a>
@@ -59,7 +59,7 @@
             </div>
             <div class="col-md-4 position-relative">
               <div class="p-3 text-center">
-                <h1 class="text-gradient text-primary"> <span id="state2" countTo="{{ num_dishes }}">0</span>+</h1>
+                <h1 class="text-gradient text-primary"> <span id="state2" countTo="{{ num_dishes }}">0</span></h1>
                 <a href="{% url 'kitchen:dish-list' %}" class="dropdown-item border-radius-md">
                   <h5 class="mt-3">Dishes</h5>
                 </a>
