Move the Create button on the pages Cook_list, Dish_type_list and Dish_list to the left for user convenience

--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -6,7 +6,7 @@
 {% block content %}
   <h2 style="padding-top: 100px">
     Dishes Types List
-    <a href="{% url 'kitchen:dish-type-create' %}" class="btn btn-primary link-to-page">
+    <a href="{% url 'kitchen:dish-type-create' %}" class="btn btn-primary" style="margin-left: 20px">
       Create
     </a>
   </h2>
