--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -8,7 +8,7 @@
 
   <h2 style="padding-top: 100px">
     Dishes List
-    <a href="{% url 'kitchen:dish-create' %}" class="btn btn-primary link-to-page">
+    <a href="{% url 'kitchen:dish-create' %}" class="btn btn-primary" style="margin-left: 20px">
       Create
     </a>
   </h2>
